# baodweb

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  __version__.py  config  main.py  pyproject.toml  requirements.txt  setup.py  start-page-vi.html  start-page.html  welcome.html
.github/workflows/: python-app.yml
core/: ansi.py  braillify.py  configman.py  elements.py  font.py  image_render.py  parser.py  search.py
error/: 403.html  404.html  unexpected.html
test-pages/: about.html  complex.html  features.html  html.html  image.html  listntable.html  nav-in-head.html  table.html
utils/: image_render.py
